started changing sliders

--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -65,7 +65,7 @@
                         <div class="col-md-5 col-sm-6 col-xs-12 js-fullheight slider-text">
                             <div class="slider-text-inner">
                                 <div class="desc">
-                                    <h2>We shape our buildings; thereafter they shape Us.</h2>
+                                    <h2>We do painting, carpet installing, trash removal, total clean outs, and that's just for starters...</h2>
                                     <p><a href="#" class="btn btn-primary btn-outline">View Details</a></p>
                                 </div>
                             </div>
@@ -78,7 +78,10 @@
                         <div class="col-md-5 col-sm-6 col-xs-12 js-fullheight slider-text">
                             <div class="slider-text-inner">
                                 <div class="desc">
-                                    <h2>Architecture is a visual art, and the buildings speak for themselves.</h2>
+                                    <!-- all kinds of home renovations -->
+                                    <h2>We specialize in CARPET INSTALLATION!!!</h2>
+                                    <h3>We install new, used, or do re-stretches and repairs.
+                                        We can offer you the best deal in town!!!
                                     <p><a href="#" class="btn btn-primary btn-outline">View Details</a></p>
                                 </div>
                             </div>
